# web-skill-labs

./: package-lock.json  package.json  pnpm-lock.yaml
Exercism/lua/: lib  readme.md  run.sh  submit.sh  test.sh
Exercism/zig/: submit.sh
infra/deployer/: deploy-dev2-apis.sh
lua/: Exercism
lua/custom-libs/: number.lib.lua  string.lib.lua
lua/lapis-try1/: nginx.conf  readme.md
nodejs/blockchain-nomad/: package-lock.json  package.json  tsconfig.json
nodejs/bun-elysia-official-tutorial/: .env  package.json
nodejs/fcm-receiver/: README.md  compose.yaml  package.json  pnpm-lock.yaml  vite.config.ts
nodejs/graphql-nest-ytb-01/: README.md  eslint.config.mjs  package.json  pnpm-lock.yaml
nodejs/grpc-example/: package-lock.json  package.json  tsconfig.json
nodejs/grpc-udemy/: package.json
nodejs/htmx-try-1/: .env  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
nodejs/nestjs-graphql-mongo-any/: .gitignore  duck.parquet  package.json  pnpm-lock.yaml  tsconfig.json
nodejs/nestjs-prisma-psql-any/: .env.dev  eslint.config.mjs  package.json  pnpm-lock.yaml  req.sh
nodejs/next-any-lab/: package-lock.json  package.json  pnpm-lock.yaml
nodejs/plain-node-server/: main.js  package.json
nodejs/practice-all/: .env.dev  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
nodejs/react-19-uee-test/: .env  components.json  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
nodejs/react-graphql-any/: .env.example  .gitignore  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
nodejs/rpc-grocery-customer/: .env  .env.dev  package.json
nodejs/rpc-grocery-front/: package-lock.json  package.json
rust/: new.js
rust/packt-rocket-1/ch05-1-app/: .gitignore  Cargo.toml  Rocket.toml  rocket_exam.db  rocket_exam.db-shm  rocket_exam.db-wal
rust/packt-rocket-1/ch05-1-app/migrations/: 20250113082322_create_users.sql  20250115011721_create_users.sql
rust/packt-rocket-1/ch05-1-app/src/: main.rs
rust/packt-rocket-1/ch05-1-app/src/models/: mod.rs  our_date_time.rs  pagination.rs  post.rs  user.rs  user_status.rs
rust/packt-rocket-1/ch05-1-app/src/routes/: mod.rs  user.rs
rust/packt-rocket-1/ch09-1-post/: Cargo.toml  Rocket.toml  rocket_exam.db
rust/packt-rocket-1/ch09-1-post/migrations/: 20250117080140_create_posts.sql
rust/packt-rocket-1/ch09-1-post/src/: lib.rs  main.rs
rust/packt-rocket-1/ch09-1-post/src/fairings/: mod.rs
rust/packt-rocket-1/ch09-1-post/src/guards/: mod.rs
rust/packt-rocket-1/ch09-1-post/src/models/: mod.rs  photo_post.rs  post.rs  post_type.rs  text_post.rs  user.rs  video_post.rs
rust/packt-rocket-1/ch09-1-post/src/routes/: post.rs  user.rs
rust/packt-rocket-1/ch09-1-post/src/views/posts/: index.html.tera
rust/packt-rocket-1/ch09-1-post/src/views/users/: index.html.tera  show.html.tera
rust/packt-rocket-1/ch09-3-upload-async/: .gitignore  Cargo.toml  Rocket.toml
rust/packt-rocket-1/ch09-3-upload-async/src/: lib.rs  main.rs
rust/packt-rocket-1/ch09-3-upload-async/src/catchers/: mod.rs
rust/packt-rocket-1/ch09-3-upload-async/src/errors/: our_error.rs
rust/packt-rocket-1/ch09-3-upload-async/src/fairings/: csrf.rs
rust/packt-rocket-1/ch09-3-upload-async/src/models/: bool_wrapper.rs  our_date_time.rs  post.rs  text_post.rs  user_status.rs  video_post.rs  worker.rs
rust/packt-rocket-1/ch09-3-upload-async/src/routes/: post.rs  user.rs
rust/packt-rocket-1/ch09-3-upload-async/src/views/posts/: show.html.tera
rust/packt-rocket-1/ch09-3-upload-async/src/views/users/: _user.html.tera  show.html.tera
rust/packt-rocket-1/ch09-3-upload-async/src/workers/: video.rs
rust/packt-rocket-1/ch09-3-upload-async/static/: mini-default.css
(+2010 files in other folders)
