[package]
name = "our_application"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "our_application"
path = "src/main.rs"

[lib]
name = "our_application"
path = "src/lib.rs"

[dependencies]
chrono = "0.4.39"
rocket = { version = "0.5.1", features = ["json", "uuid"] }
rocket_okapi = { version = "0.9.0", features = ["swagger"] }
serde = "1.0.217"
sqlx = { version = "0.8.3", features = ["sqlite", "uuid", "runtime-tokio-rustls", "chrono"] }
uuid = { version = "1.11.1", features = ["v4"] }
