[package]
name = "our_application"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "our_application"
path = "src/main.rs"

[lib]
name = "our_application"
path = "src/lib.rs"

[dependencies]
ammonia = "4.0.0"
argon2 = "0.5.3"
chrono = "0.4.39"
rand_core = { version = "0.6.4", features = ["std"] }
regex = "1.11.1"
rocket = { version = "0.5.1", features = ["json", "uuid"] }
rocket_okapi = { version = "0.9.0", features = ["swagger"] }
serde = "1.0.217"
sqlx = { version = "0.8.3", features = ["sqlite", "uuid", "runtime-tokio-rustls", "chrono"] }
uuid = { version = "1.11.1", features = ["v4"] }
zxcvbn = "3.1.0"
