[package]
name = "our_application"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "our_application"
path = "src/main.rs"

[lib]
name = "our_application"
path = "src/lib.rs"

[dependencies]
ammonia = "4.0.0"
argon2 = { version = "0.5.3", features = ["std"] }
async-log = "2.0.0"
base64 = "0.22.1"
chrono = { version = "0.4.39", features = ["serde"] }
fern = "0.7.1"
log = "0.4.25"
multer = "3.1.0"
rand_core = { version = "0.6.4", features = ["std"] }
regex = "1.11.1"
rocket = { version = "0.5.1", features = ["json", "uuid", "secrets"] }
rocket_dyn_templates = { version = "0.2.0", features = ["tera"] }
rocket_okapi = { version = "0.9.0", features = ["swagger"] }
serde = "1.0.217"
sqlx = { version = "0.8.3", features = ["sqlite", "uuid", "runtime-tokio-rustls", "chrono"] }
time = { version = "0.3.37", features = ["std"] }
tokio-util = "0.7.13"
uuid = { version = "1.11.1", features = ["v4"] }
#zxcvbn = "3.1.0"

[profile.dev]
#panic = "abort"